--- a/inst/12_mc_simulate_data/FAR/mean_estimates/latex_mean_estimates_FAR_mfBm_d1.tex
+++ b/inst/12_mc_simulate_data/FAR/mean_estimates/latex_mean_estimates_FAR_mfBm_d1.tex
@@ -1,15 +1,16 @@
+%latex.default(object = dt_mean_dcast, file = paste0("./inst/12_mc_simulate_data/",     process, "/mean_estimates/latex_mean_estimates_", process,     "_", white_noise, "_", design, ".tex"), n.cgroup = c(1, 1,     2, 2, 2, 2), cgroup = c("", "", "t = 0.2", "t = 0.4", "t = 0.7",     "t = 0.8"), colheads = c("$N$", "$\\lambda$", "Bias", "Sd",     "Bias", "Sd", "Bias", "Sd", "Bias", "Sd"), rowname = NULL)%
 \begin{table}[!tbp]
 \begin{center}
 \begin{tabular}{rcrcllcllcllcll}
 \hline\hline
 \multicolumn{1}{c}{\bfseries }&\multicolumn{1}{c}{\bfseries }&\multicolumn{1}{c}{\bfseries }&\multicolumn{1}{c}{\bfseries }&\multicolumn{2}{c}{\bfseries t = 0.2}&\multicolumn{1}{c}{\bfseries }&\multicolumn{2}{c}{\bfseries t = 0.4}&\multicolumn{1}{c}{\bfseries }&\multicolumn{2}{c}{\bfseries t = 0.7}&\multicolumn{1}{c}{\bfseries }&\multicolumn{2}{c}{\bfseries t = 0.8}\tabularnewline
 \cline{5-6} \cline{8-9} \cline{11-12} \cline{14-15}
-\multicolumn{1}{c}{$N$}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{$\lmbda$}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}\tabularnewline
+\multicolumn{1}{c}{$N$}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{$\lambda$}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}&\multicolumn{1}{c}{}&\multicolumn{1}{c}{Bias}&\multicolumn{1}{c}{Sd}\tabularnewline
 \hline
-$ 150$&&$  40$&&-0.0104&0.2325&&0.0435&0.3171&&0.0635&0.3449&&0.0677&0.3636\tabularnewline
-$1000$&&$  40$&&-0.0106&0.1373&&-0.0179&0.146&&0.0017&0.1841&&0.0077&0.1709\tabularnewline
-$ 400$&&$ 300$&&0.01&0.1457&&0.0234&0.1817&&0.0142&0.2156&&0.0098&0.2278\tabularnewline
-$1000$&&$1000$&&-0.0017&0.0964&&0.0085&0.1224&&0.0068&0.1301&&0.0022&0.1364\tabularnewline
+$ 150$&&$  40$&&0.0056&0.2079&&0.0112&0.2692&&0.0329&0.3259&&0.0497&0.3417\tabularnewline
+$1000$&&$  40$&&5e-04&0.0883&&-0.0062&0.1139&&0.0119&0.1353&&0.0213&0.1425\tabularnewline
+$ 400$&&$ 300$&&0.0074&0.1283&&0.0049&0.1626&&0.0119&0.1944&&0.015&0.2044\tabularnewline
+$1000$&&$1000$&&-0.002&0.0849&&4e-04&0.1094&&-3e-04&0.1301&&3e-04&0.1369\tabularnewline
 \hline
 \end{tabular}\end{center}
 \end{table}
