--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,6 +1,6 @@
 @article{rubin2020,
   author = {Tom{\'a}š Rub{\'i}n and Victor M. Panaretos},
-  title = {{Sparsely observed functional time series: estimation and prediction}},
+  title = {Sparsely observed functional time series: estimation and prediction},
   volume = {14},
   journal = {Electronic Journal of Statistics},
   number = {1},
@@ -10,4 +10,11 @@
   year = {2020},
   doi = {10.1214/20-EJS1690},
   URL = {https://doi.org/10.1214/20-EJS1690}
+}
+
+@article{maissoro2024adaptive,
+  title={Adaptive estimation for Weakly Dependent Functional Times Series},
+  author={Maissoro, Hassan and Patilea, Valentin and Vimond, Myriam},
+  journal={arXiv preprint arXiv:2403.13706},
+  year={2024}
 }
