v0 wrap Rcpp func in R func

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -18,3 +18,10 @@
   journal={arXiv preprint arXiv:2403.13706},
   year={2024}
 }
+
+@article{maissoro2024pred,
+  title={Adaptive prediction for Functional Times Series},
+  author={Maissoro, Hassan and Patilea, Valentin and Vimond, Myriam},
+  journal={arXiv preprint arXiv:2412.xxxxx},
+  year={2024}
+}
